# gopyby

./: README.md  pyproject.toml
golang_wasm/: README.md  add.wasm  go.mod  pywasmer.py  wasm_example.go
gopy_example/: README.md  go.mod  hello.go  hello.py
gopy_example/golanghello/: Makefile  _golanghello.cpython-311-darwin.h  _golanghello.cpython-313-darwin.h  build.py  go.py  golanghello.c  golanghello.go  golanghello.py
ruby_example/: README.md  adder.go  go.mod  go.sum  quartz_example.rb
