[project]
name = "gopyby-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "thegang_zThomasH",email = "zthomash@pttep.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gopy (>=0.7.3,<0.8.0)",
    "wasmer (>=1.1.0,<2.0.0)",
    "wasmtime (>=29.0.0,<30.0.0)",
    "wasmer-compiler-cranelift (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
